--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto|Josefin+Slab:600|Raleway:400,600);
-body{
+
+#total {
+  display: none;
+}
+body {
   background-color: #F5EDDC;
   margin-bottom: 15%;
 }
